IGNITE-10787: scripts added as gradle dependency

--- a/build.gradle
+++ b/build.gradle
@@ -55,9 +55,9 @@ allprojects {
 
     repositories {
         //uncomment for RC testing
-        maven {
+        /* maven {
             url "https://repository.apache.org/content/repositories/orgapacheignite-1435/"
-        }
+        } */
     }
 }
 
